Fix Layout Issue

--- a/src/app/job-status/job-status.component.scss
+++ b/src/app/job-status/job-status.component.scss
@@ -1,7 +1,12 @@
+.job-info {
+    height: 27vw;
+    display: block;
+}
+
 .job-info__no-job {
     width: 100%;
     font-size: 6vw;
-    height: 21.5vh;
+    height: 26vh;
     margin-top: 19vh;
     text-align: center;
 }
